Fixed infoboxes removed the "[style=""]" because it would not restyle infoboxes with colors, but many times the text is unreadable (i think it's maybe better to make all of them gray for now?) (examples: https://en.wikipedia.org/wiki/Kefalonia_International_Airport https://en.wikipedia.org/wiki/Al_otro_lado_del_muro https://en.wikipedia.org/wiki/ASK/Ogre)

--- a/wikipedia-dark.user.css
+++ b/wikipedia-dark.user.css
@@ -429,6 +429,12 @@
   .tracklist-total-length td {
     background-color: var(--gray-3) !important;
   }
+  .infobox-data {
+    background-color: var(--gray-2) !important;
+  }
+  .infobox-header {
+    border-color: var(--gray-5) !important;
+  }
   /* transparent background */
   html,
   body,
@@ -899,8 +905,8 @@
     background-color: var(--gray-3) !important;
   }
   .ve-ui-mwParameterResultWidget.oo-ui-optionWidget-highlighted,
-  .infobox-above[style=""],
-  .infobox-header[style=""] {
+  .infobox-above,
+  .infobox-header {
     background-color: var(--gray-3);
   }
   table[class="toccolours;"] tr[style*="background:#FAFAFA"],
